# qdirtest

./: .drone.yml  .gitignore  CMakeLists.txt  Dockerfile  README.md  test-statx.c  test.sh
Docker/: Dockerfile  Dockerfile-neon.build_in  Dockerfile-ubuntu.build_in  Dockerfile.build_in
Docker/qdirtest/: main.cpp  test.sh
